# RandomNameGenerator

./: CMakeLists.txt  frontend.txt  history.cpp  history.hpp  history.txt  main.cpp  main.cpp.bak  namepicker.cpp  namepicker.hpp  randomnamegenerator.cpp  randomnamegenerator.hpp  record.cpp  record.hpp  time.cpp  time.hpp
